--- a/build.gradle
+++ b/build.gradle
@@ -47,9 +47,8 @@ dependencies {
     // batch
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
-    testImplementation 'org.springframework.boot:spring-boot-batch-test'
+//    testImplementation 'org.springframework.boot:spring-boot-batch-test'
     //Redis
-    implementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
