--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
 //    testImplementation 'org.springframework.boot:spring-boot-batch-test'
     //Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    //Redisson
+    implementation 'org.redisson:redisson-spring-boot-starter:3.16.3'
     // CurcuitBreaker
     implementation 'io.github.resilience4j:resilience4j-spring-boot2:1.7.1'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
